<resources>
    <string name="app_name">shoe_inventory_udacity</string>
    <string name="gre">Sign up</string>
    <string name="sign">Sign in</string>
    <string name="boost">Boost your</string>
    <string name="style">style now</string>
    <string name="appear">Appear more confident</string>
    <string name="best">best shoes with elegant designs</string>
    <string name="find">Find your</string>
    <string name="fav">favorite shoes</string>
    <string name="imagedes">Image of shoe</string>
    <string name="buy">Buy</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_size">Shoe size</string>
    <string name="price">$</string>
    <string name="detail">Details</string>
    <string name="size">Size</string>
    <string name="payment">Payment</string>
    <string name="mastercard">Mastercard</string>
    <string name="visa">Visa</string>
    <string name="promo">Promo Code</string>
    <string name="total_pay">Total Payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="enter_promo">Enter promo code</string>
    <string name="apply">Apply</string>
    <string name="shopping">Continue Shopping</string>
    <string name="received">we have received your</string>
    <string name="order">order successful</string>
    <string name="check_out">Check out</string>
    <string name="brown">Brown leather shoes</string>
    <string name="joe">Joseph Barrientos</string>
    <string name="metric">High Heels</string>
    <string name="plomp">Nike Air</string>
    <string name="plomp2">Black Nike</string>
    <string name="all_stars">Converse all stars</string>
    <string name="unsplash">Ryan Plomp</string>
    <string name="price_a">$30</string>
    <string name="price_b">$50</string>
    <string name="leatherdes">Simple and fashionable, soft and comfortable, lightweight and wear-resistant，it is perfect for daily use.</string>
    <string name="joedes">Them 908 ivory white soul plates</string>
    <string name="metric_des">a type of shoe with a raised heel. This design raises the heel of the wearers foot higher off the ground than the wearers toes</string>
    <string name="plompdes">levitating sneaker</string>
    <string name="starsdes">The Converse All Stars serves as a global network connecting creatives, providing digital and
physical experiences, commissioned work and mentorship opportunities.</string>
    <string name="sizec">6</string>
    <string name="sizea">4</string>
    <string name="sizeb">5</string>
    <string name="sized">7</string>
    <string name="logoutDet">Logout</string>
    <string name="instr"> <b>Hello!</b> <br/> Click <b>"the floating button"</b>  to <br/> record a <br/>expense <br/> and menu to logout<br/></string>
    <string name="manufacturer">Manufacturer</string>
    <string name="rec">record an</string>
    <string name="exp">expense</string>
    <string name="menu">menu</string>
    <string name="arrow">arrow</string>
    <string name="name">Name</string>
    <string name="des">Description</string>
    <string name="select">Available size</string>
    <string name="cancel">Cancel</string>
    <string name="floating">Floating action button</string>
    <string name="nested">Nested Scroll view</string>
    <string name="save">Save</string>
    <string name="next"><b>Next</b></string>
    <string name="aft"><br/>Afterwards, <br/> you  will see a monthly <br/> overview here<br/></string>
    <string name="month">will see a monthly</string>
    <string name="over">overview here</string>
    <string name="avail">Choose size</string>
    <string name="shoe_prize">Price</string>
    <string name="shoe_inv"><b>Shoe inventory app</b> is all about shoes.<br/> To get started click <b>&quot; next &quot;</b> to move to the instructions page
    </string>

</resources>